@@ -1,3 +1,10 @@
+2011-09-21  Gavin Barraclough  <barraclough@apple.com>
+
+        Build fix following fix for bug #68586.
+
+        * jit/JIT.cpp:
+        * jit/JITInlineMethods.h:
+
 2011-09-21  Filip Pizlo  <fpizlo@apple.com>
 
         DFG JIT should be able to compile op_throw
